Config-Server/deploy.yaml
## Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: kv-backend-apps

---
## Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server-deployment
  labels:
    app: config-server
  namespace: kv-backend-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
      - name: config-server
        image: kaivalya461/config-server
---
## Service       
apiVersion: v1
kind: Service
metadata:
  name: config-server-service
  namespace: kv-backend-apps
spec:
  selector:
    app: config-server
  # type: LoadBalancer
  ports:
    - name: config-server
      protocol: TCP
      port: 8888
      targetPort: 8888
      # nodePort: 30030
