Config-Server/ingress.yaml
## Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: config-server-ingress
  namespace: kv-backend-apps
spec:
  ingressClassName: nginx
  rules:
  - host: config-server.kvhome.in
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: config-server-service
            port:
              number: 8888
